--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "devDependencies": {
         "@commitlint/cli": "^13.1.0",
         "@commitlint/config-conventional": "^13.1.0",
+        "@types/jest": "^27.4.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-prettier": "^3.4.1",
         "husky": "^7.0.2",
-        "jest": "^27.0.6",
+        "jest": "^27.5.1",
         "lint-staged": "^11.1.2",
         "prettier": "^2.3.2"
     }
